--- a/index.html
+++ b/index.html
@@ -22,13 +22,22 @@
         background-color: black;
     }
 
-    div img {
+    div.frame img {
         max-height: 100%;
         max-width: 100%;
         transform: translate(-50%, -50%);
-        position: relative;
+        position: absolute;
         left: 50%;
         top: 50%;
+    }
+
+    div.frame_index {
+        font-family: sans-serif;
+        font-size: 200%;
+        text-align: center;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
     }
 </style>
 <script>
