--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     }
 
     html,body {
-        height: 99%;
-        width: 99%;
+        height: 100%;
+        width: 100%;
         background-color: black;
+        overflow: hidden;
     }
 
     div.frame img {
