Add web app to host local files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Photo Collage</title>
-    <script src="frame.js"></script>
+    <script src="static/frame.js"></script>
 </head>
 <style>
     @keyframes fade_in {
@@ -44,5 +44,5 @@
 <script>
     let collage = new Collage()
 </script>
-<body onresize="collage.update()" onload="collage.run(1)"></body>
+<body onresize="collage.update()" onload="collage.run(5)"></body>
 </html>
