--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         width: 100%;
         background-color: black;
         overflow: hidden;
+        cursor: none;
     }
 
     div.frame img {
